--- a/package.json
+++ b/package.json
@@ -1,25 +1,16 @@
 {
-  "name": "pkg-placeholder",
+  "name": "v-owl-carousel",
   "type": "module",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "packageManager": "pnpm@8.7.0",
   "description": "_description_",
-  "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
-  "funding": "https://github.com/sponsors/antfu",
-  "homepage": "https://github.com/antfu/pkg-placeholder#readme",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/antfu/pkg-placeholder.git"
-  },
-  "bugs": "https://github.com/antfu/pkg-placeholder/issues",
   "keywords": [],
   "sideEffects": false,
   "exports": {
     ".": {
       "types": "./dist/index.d.ts",
-      "import": "./dist/index.mjs",
-      "require": "./dist/index.cjs"
+      "import": "./dist/index.mjs"
     }
   },
   "main": "./dist/index.mjs",
@@ -47,10 +38,15 @@
     "typecheck": "tsc --noEmit",
     "prepare": "simple-git-hooks"
   },
+  "dependencies": {
+    "owl.carousel": "^2.3.4",
+    "vue": "2"
+  },
   "devDependencies": {
     "@antfu/eslint-config": "^0.41.0",
     "@antfu/ni": "^0.21.6",
     "@antfu/utils": "^0.7.6",
+    "@types/jquery": "^3.5.17",
     "@types/node": "^20.5.7",
     "bumpp": "^9.2.0",
     "eslint": "^8.48.0",
@@ -58,6 +54,7 @@
     "lint-staged": "^14.0.1",
     "pnpm": "^8.7.0",
     "rimraf": "^5.0.1",
+    "sh-v-owl-carousel": "^1.0.5",
     "simple-git-hooks": "^2.9.0",
     "typescript": "^5.2.2",
     "unbuild": "^2.0.0",
