--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "v-owl-carousel",
+  "name": "bgl-v-owl-carousel",
   "type": "module",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "packageManager": "pnpm@8.7.0",
   "description": "_description_",
   "license": "MIT",
