--- a/.eslintrc
+++ b/.eslintrc
@@ -1,3 +1,16 @@
 {
-  "extends": "@antfu"
+	"extends": "@antfu",
+	"rules": {
+		"no-console": "warn",
+		"no-tabs": "off",
+		"@typescript-eslint/indent": [
+			"warn",
+			"tab"
+		],
+		"vue/html-indent": [
+			"warn",
+			"tab"
+		],
+		"@typescript-eslint/semi": "off"
+	}
 }
