--- a/package.json
+++ b/package.json
@@ -1,13 +1,14 @@
 {
   "name": "bgl-v-owl-carousel",
   "type": "module",
-  "version": "0.0.7",
+  "version": "0.0.8",
   "packageManager": "pnpm@8.7.0",
   "description": "Bagel Vue Owl Carousel",
   "license": "MIT",
   "keywords": [],
   "sideEffects": false,
   "exports": {
+    "./*": "./*",
     ".": {
       "types": "./dist/index.d.ts",
       "import": "./dist/index.mjs",
@@ -38,7 +39,7 @@
     "components.d.ts"
   ],
   "scripts": {
-    "dev:app": "vite serve dev",
+    "dev:app": "vite serve playgrounds/dev",
     "build": "unbuild",
     "dev": "unbuild --stub",
     "lint": "eslint .",
