--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "bgl-v-owl-carousel",
   "type": "module",
-  "version": "0.0.21",
+  "version": "0.0.22",
   "packageManager": "pnpm@8.7.0",
   "description": "Bagel Vue Owl Carousel",
   "license": "MIT",
@@ -43,7 +43,7 @@
     "components.d.ts"
   ],
   "scripts": {
-    "dev:app": "vite serve playground",
+    "dev:app": "vite serve playground --host",
     "build": "unbuild",
     "dev": "unbuild --stub",
     "lint": "eslint .",
