--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "prepare": "simple-git-hooks"
   },
   "dependencies": {
+    "-": "^0.0.1",
     "@vueuse/core": "^10.4.1",
     "jquery": "^3.7.1",
     "owl.carousel": "^2.3.4"
@@ -69,6 +70,7 @@
     "@vue/tsconfig": "^0.4.0",
     "bumpp": "^9.2.0",
     "eslint": "^8.48.0",
+    "eslint-plugin-import": "^2.28.1",
     "esno": "^0.17.0",
     "lint-staged": "^14.0.1",
     "pnpm": "^8.7.0",
